--- a/.github/workflows/sync-staging-with-main.yml
+++ b/.github/workflows/sync-staging-with-main.yml
@@ -33,11 +33,12 @@ on:
             #          git push origin staging
             env:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-          - name: Merge main(dev) -> staging # git merge main --no-ff -> no fast forwarding makes it easier to track changes
+            # git merge main --no-ff -> no fast forwarding makes it easier to track changes
+            # flag option to auto resolve merge conflicts using mains changes --strategy-option ours
+          - name: Merge main(dev) -> staging
             run: |
               git checkout main
               git pull
               git checkout staging
-              git merge main --no-ff  --strategy-option ours 
+              git merge main --no-ff  
               git push origin staging
