--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
       # Build workflow and save as artifact
       # Gradle will automatically compile Kotlin when running tasks like build. This step explicitly validates Kotlin.
       # If there are Kotlin compile errors, this step will fail and you'll see the compilation issues in the logs.
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+#      - name: Validate Gradle wrapper
+#        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
