--- a/.github/workflows/sync-staging-with-main.yml
+++ b/.github/workflows/sync-staging-with-main.yml
@@ -18,7 +18,12 @@ permissions: # we can tighten this up in settings but are able to set customize 
   security-events: write
   statuses: write
 jobs:
+  CI-preSyncCheck:
+    if: github.event.pull_request.merged == true || github.event_name == 'push'
+    uses: ./.github/workflows/ci.yml # reusable workflow file path
+
   sync-branch:
+    needs: CI-preSyncCheck
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
