--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI (triggers on ALL)
+name: CI (unsigned APK)
 run-name: Gradle CI
 on:
   workflow_call: # required when creating a reusable workflow
@@ -21,10 +21,39 @@ jobs:
           distribution: 'temurin'
       - name: Download and unzip Gradle
         run: |
-          wget https://services.gradle.org/distributions/gradle-8.2.1-bin.zip
-          unzip gradle-8.2.1-bin.zip
-          echo "${GITHUB_WORKSPACE}/gradle-8.2.1/bin" >> $GITHUB_PATH
-      - name: Verify Gradle version
-        run: gradle --version
-      - name: Run the Gradle package task
-        run: gradle build
+            wget https://services.gradle.org/distributions/gradle-8.2.1-bin.zip
+            unzip gradle-8.2.1-bin.zip
+            echo "${GITHUB_WORKSPACE}/gradle-8.2.1/bin" >> $GITHUB_PATH
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+#      - name: Run the Gradle package task
+#        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+#          #        with:
+#        # Can include this if we decide to add our own customized gradle package
+#      #          arguments: -b ci.gradle package
+#
+#      # dependencies automatically installed by gradle
+
+      - name: Lint code
+        run: ./gradlew lint
+      #TODO: test compilation success check
+      - name: Compile Tests
+        run: ./gradlew compileDebugAndroidTestKotlin
+
+      - name: Run unit tests
+        run: ./gradlew test
+
+      - name: Code coverage
+        run: ./gradlew koverhtmlreport
+
+      # Build workflow and save as artifact
+      # Gradle will automatically compile Kotlin when running tasks like build. This step explicitly validates Kotlin.
+      # If there are Kotlin compile errors, this step will fail and you'll see the compilation issues in the logs.
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+        with:
+          arguments: build --scan
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Unsigned_APK
+          path: app/build/outputs/apk/release/app-release-unsigned.apk
