--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,21 +13,21 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        gradle-version: [ 8.2.1 ]
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Download and unzip Gradle
-        run: |
-            wget https://services.gradle.org/distributions/gradle-8.2.1-bin.zip
-            unzip gradle-8.2.1-bin.zip
-            echo "${GITHUB_WORKSPACE}/gradle-8.2.1/bin" >> $GITHUB_PATH
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-#      - name: Run the Gradle package task
-#        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+      - name: Run the Gradle package task
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
 #          #        with:
 #        # Can include this if we decide to add our own customized gradle package
 #      #          arguments: -b ci.gradle package
@@ -52,7 +52,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
-          arguments: build --scan
+          arguments: build
       - uses: actions/upload-artifact@v3
         with:
           name: Unsigned_APK
